# parallel-jpeg-xs

./: CMakeLists.txt  README.md
libjxs/src/: xs_dec.c  xs_enc.c
